# transit_model

./: Cargo.toml  README.md
.github/workflows/: ci.yml
gtfs2ntfs/: Cargo.toml
gtfs2ntfs/src/: main.rs
src/: lib.rs  model.rs  objects.rs
src/documentation/: netex_idfm_to_ntfs.md
src/gtfs/: mod.rs  read.rs
src/netex_idf/: lines.rs  offers.rs  read.rs  stops.rs
src/ntfs/: filter.rs  mod.rs  read.rs  write.rs
tests/fixtures/netexidf2ntfs/output/: object_codes.txt
